# zkvisaReserch

nextjs/: package.json
nextjs/bank/: index.js  package-lock.json  package.json
nextjs/payment/: package-lock.json  package.json
nextjs/payment/src/Components/Payment/: MainContainer.tsx
nextjs/payment/src/app/payment/[payload]/: page.tsx
nextjs/payment/src/interface/abi/: verifier_router_abi.ts
nextjs/payment/src/interface/transaction/: transaction.ts
nextjs/shop/: .env  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
nextjs/shop/src/: App.tsx
nextjs/shop/src/components/: mainContainer.tsx
nextjs/shop/src/interface/: transaction.ts
nextjs/src/Components/Payment/: MainContainer.tsx
nextjs/src/Components/Shop/: MainContainer.tsx
nextjs/src/app/: layout.tsx  page.tsx
nextjs/src/app/bank/: page.tsx
nextjs/src/app/payment/[payload]/: page.tsx
nextjs/src/app/shop/: page.tsx
nextjs/src/interface/: transaction.ts
zk/: .gitignore  Cargo.toml
zk/apps/: Cargo.toml
zk/apps/src/: lib.rs  main.rs
zk/apps/src/utils/: genreating_proof.rs  interface.rs  mod.rs
zk/hardhat/: .gitignore  package.json
zk/hardhat/contracts/: ImageID.sol
zk/hardhat/test/: Elf.sol
zk/methods/: Cargo.toml  build.rs
zk/methods/guest/: Cargo.toml
