[package]
name = "host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bank"
path = "apps/bank.rs"

[[bin]]
name = "users"
path = "apps/users.rs"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

