[package]
name = "apps"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bank"
path = "src/bin/bank.rs"

[[bin]]
name = "users"
path = "src/bin/client.rs"

[dependencies]
risc0-zkvm = { version = "1.1.2" }
risc0-ethereum-contracts = { version = "1.1.4" }
risc0-groth16 = { version = "1.1.2" }
bonsai-sdk = "1.1.3"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
methods = { workspace = true }
ethers = { version = "2.0.14" }
dotenv = "0.15"
tokio = { version = "1.10", features = ["full"] }
serde = { workspace = true }
anyhow = "1.0.44"
hex = "0.4.3"
actix-web = "4"
urlencoding = "2.1" # For decoding URL-encoded strings
serde_json = "1.0"

