[package]
name = "apps"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bank"
path = "src/bin/bank.rs"

[[bin]]
name = "users"
path = "src/bin/client.rs"

[dependencies]
risc0-zkvm = { workspace = true}
risc0-ethereum-contracts = { workspace = true}
bonsai-sdk = "1.1.3"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
methods = { workspace = true }
ethers = { version = "2.0.14" }
dotenv = "0.15"
tokio = { workspace = true } 
serde = { workspace = true}
serde_derive = { workspace = true }
sha2 = {workspace = true}
anyhow = {workspace = true}
hex = {workspace = true}
actix-web = "4"
actix-cors = "0.6"
urlencoding = "2.1"
serde_json = "1.0"


